# napirs-legogroth16

./: .gitignore  Cargo.toml  README.md  aggregated_opening_key.json  index.d.ts  index.js  package-lock.json  simple-test-bls12-381.js  simple-test.js  test.js  test_proof1_opening_key.json  test_proof2_opening_key.json  test_proof3_opening_key.json
__test__/: index.spec.ts
benchmark/: bench.ts
circom/: range_proof.circom
circom/bls12-381/: range_proof.r1cs  range_proof.wasm
circom/bn128/: range_proof.r1cs  range_proof.wasm
src/: keys.rs  lib.rs  prover.rs  setup.rs  setup_napi.rs  verifier.rs
